update(admin board): fixed ui alignments in service marketplace

--- a/src/components/pages/AdminBoardDetail/AdminBoardDetail.scss
+++ b/src/components/pages/AdminBoardDetail/AdminBoardDetail.scss
@@ -18,7 +18,7 @@
  * SPDX-License-Identifier: Apache-2.0
  ********************************************************************************/
 .service-admin-board-detail {
-  width: 1440px;
+  min-width: 1440px;
   .service-back {
     height: 140px;
     padding: 48px 256px 48px 160px;
