--- a/src/components/pages/ServiceMarketplaceDetail/Marketplace.scss
+++ b/src/components/pages/ServiceMarketplaceDetail/Marketplace.scss
@@ -18,17 +18,16 @@
  * SPDX-License-Identifier: Apache-2.0
  ********************************************************************************/
 .marketplace-main {
-  width: 100%;
-  padding: 30px 0;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 1140px;
-  .product-description {
-    margin: 42px 0;
-    p {
-      margin-bottom: 12px;
+  min-width: 1440px;
+  .service-back {
+    height: 140px;
+    padding: 48px 256px 48px 160px;
+  }
+  .service-marketplace-content {
+    height: 1352px;
+    padding: 0px 256px 0px 256px;
+    .divider-height {
+      height: 39px;
     }
   }
 }
